<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".views.SignInFragment">

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxStrokeColor="#B71C1C"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/fui_ic_mail_white_24dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/si_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/e_mail"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="48dp"
                        android:paddingVertical="0dp"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:autoSizeMaxTextSize="18dip"
                        app:autoSizeMinTextSize="14dip"
                        app:autoSizeStepGranularity="2dp"
                        app:autoSizeTextType="uniform" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxStrokeColor="#B71C1C"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@android:drawable/ic_lock_lock">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/si_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="48dp"
                        android:paddingVertical="0dp"
                        android:singleLine="true"
                        app:autoSizeMaxTextSize="18dip"
                        app:autoSizeMinTextSize="14dip"
                        app:autoSizeStepGranularity="2dp"
                        app:autoSizeTextType="uniform" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/forgotPasswordButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#0277BD" />

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                app:cardElevation="0dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                <Button
                        android:id="@+id/emailSignInButton"
                        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="0dp"
                        android:text="@string/sign_in_with_email" />

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/don_t_have_an_account"
                            android:textAlignment="textEnd" />

                    <Button
                            android:id="@+id/toSignUpButton"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="4dp"
                            android:paddingTop="0dp"
                            android:paddingRight="4dp"
                            android:paddingBottom="0dp"
                            android:text="@string/sign_up"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="#0277BD" />
                </LinearLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="12dp"
                            android:background="@android:color/black" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@android:color/white"
                            android:padding="2dp"
                            android:text="@string/or" />
                </RelativeLayout>

                <Button
                        android:id="@+id/googleSignIn"
                        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="12dp"
                        android:text="@string/sign_in_with_google" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <ImageView
                android:src="@drawable/copyright"
                android:layout_width="150dp"
                android:layout_height="64dp" android:id="@+id/copyright" android:layout_gravity="center|start"
                android:layout_marginHorizontal="30dp"/>
    </LinearLayout>

</LinearLayout>