<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".views.SignUpFragment">

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

        <androidx.cardview.widget.CardView
                android:id="@+id/imageCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="50dip"
                app:cardElevation="5dip">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:layout_gravity="center"
                    android:baselineAlignBottom="false"
                    android:src="@drawable/add_photo"
                    app:civ_border_color="#B71C1C"
                    app:civ_border_overlay="false"
                    app:civ_border_width="2dip" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxStrokeColor="#B71C1C"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/fui_ic_anonymous_white_24dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/su_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="User name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:minWidth="320dp"
                        android:minHeight="48dp"
                        android:paddingVertical="0dp"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:autoSizeMaxTextSize="18dip"
                        app:autoSizeMinTextSize="14dip"
                        app:autoSizeStepGranularity="2dp"
                        app:autoSizeTextType="uniform" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxStrokeColor="#B71C1C"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/fui_ic_mail_white_24dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/su_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/e_mail"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:minWidth="320dp"
                        android:minHeight="48dp"
                        android:paddingVertical="0dp"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        app:autoSizeMaxTextSize="18dip"
                        app:autoSizeMinTextSize="14dip"
                        app:autoSizeStepGranularity="2dp"
                        app:autoSizeTextType="uniform" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxStrokeColor="#B71C1C"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@android:drawable/ic_lock_lock">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/su_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="48dp"
                        android:paddingVertical="0dp"
                        android:singleLine="true"
                        app:autoSizeMaxTextSize="18dip"
                        app:autoSizeMinTextSize="14dip"
                        app:autoSizeStepGranularity="2dp"
                        app:autoSizeTextType="uniform" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:boxStrokeColor="#B71C1C"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@android:drawable/ic_lock_lock">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/su_confirmPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="48dp"
                        android:paddingVertical="0dp"
                        android:singleLine="true"
                        app:autoSizeMaxTextSize="18dip"
                        app:autoSizeMinTextSize="14dip"
                        app:autoSizeStepGranularity="2dp"
                        app:autoSizeTextType="uniform" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:cardElevation="0dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                <Button
                        android:id="@+id/emailCreateAccountButton"
                        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="0dp"
                        android:text="@string/create_account" />

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/already_have_an_account"
                            android:textAlignment="textEnd"
                            android:textColor="#8D6E63" />

                    <Button
                            android:id="@+id/toSignInButton"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="4dp"
                            android:paddingTop="0dp"
                            android:paddingRight="4dp"
                            android:paddingBottom="0dp"
                            android:text="@string/login"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="#0277BD" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>